--- a/src/scss/elements/_pricing.scss
+++ b/src/scss/elements/_pricing.scss
@@ -92,7 +92,7 @@
   height: 11px;
   display: inline-block;
   margin-right: 10px;
-  background-image: url("./assets/checkmark_1.svg");
+  background-image: url("../assets/checkmark_1.svg");
 }
 
 .element--2::before {
@@ -101,7 +101,7 @@
   height: 11px;
   display: inline-block;
   margin-right: 10px;
-  background-image: url("./assets/close.svg");
+  background-image: url("../assets/close.svg");
 }
 
 .pricing__box__list {
