added calc section to html & scss

--- a/src/scss/settings/_variable.scss
+++ b/src/scss/settings/_variable.scss
@@ -9,6 +9,7 @@
 $color-primary: #4A49FF;
 $color-violet: #D08AF0;
 $color-green: #77CC6C;
+$color-orange: #e07427;
 $color-black: #000000;
 $color-grey: #808080;
 $color-light-grey: #DEDEDF;
