--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -90,6 +90,7 @@
   border-bottom: 1px solid $color-grey;
   background-color: transparent;
   line-height: 2.625rem;
+  border-radius: 8px 8px 0 0;
 }
 
 .form__label {
