--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -175,6 +175,7 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		padding: 30px;
 	}
 	.contact__form {
 		width: 80%;
