--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -60,7 +60,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 10px;
+	gap: 7px;
 	border: 0;
 	border-radius: 50%;
 	cursor: pointer;
@@ -68,7 +68,7 @@
 	span {
 		width: 30px;
 		height: 3px;
-		background: $gradient;
+		background: $color-primary;
 	}
 
 	strong {
