--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -108,9 +108,10 @@
 		background: rgba(0, 0, 0, 0.8);
 		box-shadow: $box-sh-container;
 		width: 100%;
-		height: 40%;
-		padding-bottom: 20px;
-		padding-top: 20px;
+		height: 65%;
+		padding-bottom: 40px;
+		padding-top: 40px;
+		padding-left: 30px;
 		translate: -110%;
 		transition: 0.6s translate;
 
