--- a/src/scss/settings/_variable.scss
+++ b/src/scss/settings/_variable.scss
@@ -6,15 +6,15 @@
 }
 
 //Colors//
-$color-primary: #4a49ff;
+$color-primary: #0085ff;
 $color-violet: #d08af0;
 $color-green: #77cc6c;
 $color-orange: #e07427;
-$color-black: #000000;
-$color-grey: #808080;
-$color-light-grey: #dededf;
+$color-black: #1e1e1e;
+$color-grey: #2d2d2d;
+$color-light-grey: #e2dddd;
 $color-white: #ffffff;
-$gradient: linear-gradient(#e5802d 16%, #ac3b01 64%);
+$gradient: linear-gradient(#e0ffff 16%, #006fff 64%);
 
 //Margins,paddings//
 $padding-main: 1.25rem;
@@ -26,14 +26,14 @@ $font-logo: 'Unbounded', sans-serif;
 $font-extra: 'Futura';
 
 //Box-shadow//
-$box-sh-container: rgba(0, 0, 0, 0.3) 0 4px 12px,
-	rgba(0, 0, 0, 0.4) 0 20px 13px -5px, rgba(0, 0, 0, 0.3) 1px -3px 4px inset;
-$box-sh-violet: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
-	0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
-$box-sh-primary: 0 0 0.2rem #fff, 0 0 0.2rem #7092f5, 0 0 2rem #7092f5,
-	0 0 0.8rem #7092f5, 0 0 2.8rem #7092f5, inset 0 0 1.3rem #7092f5;
-$box-sh-green: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #00ff33,
-	0 0 0.8rem #00ff33, 0 0 2.8rem #00ff33, inset 0 0 1.3rem #00ff33;
+$box-sh-container: rgba(0, 0, 0, 0.3) 0 4px 10px,
+	rgba(0, 0, 0, 0.4) 0 10px 5px -5px, rgba(0, 0, 0, 0.3) 1px -3px 4px inset;
+$box-sh-violet: 0 0 0.1rem #939292, 0 0 0.1rem #b0abab, 0 0 0.8rem #bc13fe,
+	0 0 0.3rem #bc13fe, 0 0 0.8rem #bc13fe, inset 0 0 0.8rem #bc13fe;
+$box-sh-primary: 0 0 0.1rem #939292, 0 0 0.1rem #b0abab, 0 0 0.8rem #7092f5,
+	0 0 0.3rem #7092f5, 0 0 0.8rem #7092f5, inset 0 0 0.8rem #7092f5;
+$box-sh-green: 0 0 0.1rem #939292, 0 0 0.1rem #b0abab, 0 0 0.8rem #00ff33,
+	0 0 0.3rem #00ff33, 0 0 0.8rem #00ff33, inset 0 0 0.8rem #00ff33;
 
 //Text-shadow//
 $text-sh: 2px 1px #000000, 3px 2px #030303;
