--- a/src/scss/elements/_platform.scss
+++ b/src/scss/elements/_platform.scss
@@ -99,7 +99,7 @@
 	}
 
 	.section__title {
-		padding: 1.8rem;
+		padding: 1.8rem 1.8rem 4rem 1.8rem;
 		text-align: center;
 		word-wrap: break-word;
 	}
