--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -105,9 +105,9 @@
 		background: rgba(0, 0, 0, 0.8);
 		box-shadow: $box-sh-container;
 		width: 100%;
-		height: 65%;
-		padding-bottom: 40px;
-		padding-top: 40px;
+		height: 50%;
+		padding-bottom: 30px;
+		padding-top: 30px;
 		padding-left: 30px;
 		translate: -110%;
 		transition: 0.6s translate;
@@ -116,7 +116,7 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			gap: 1rem;
+			gap: 10px;
 		}
 
 		.menu__list {
