--- a/src/scss/elements/_pricing.scss
+++ b/src/scss/elements/_pricing.scss
@@ -114,6 +114,7 @@
 .btn__box {
 	display: block;
 	position: relative;
+	text-align: center;
 }
 
 .btn--pricing {
@@ -171,30 +172,37 @@
 @media (max-width: 1080px) {
 	.section__pricing {
 		width: 100%;
+		padding: 50px 30px 50px 30px;
 	}
 
 	.pricing__boxes {
-		max-width: 100%;
-		margin: 0 auto;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: 4.8rem;
 	}
 
 	.pricing__box {
+		width: 100%;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr;
-		padding: 3rem 1.8rem 1rem 1.8rem;
 		margin-bottom: 60px;
+		padding: 30px;
 	}
 	.btn--pricing {
-		bottom: -30px;
-		left: 90px;
+		bottom: -55px;
+		left: 0;
 	}
 
 	.pricing__box__text {
 		display: none;
+	}
+
+	.pricing__box__list {
+		text-align: center;
+		list-style: none;
+		text-decoration: none;
+		margin: 30px;
 	}
 }
