--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -3,7 +3,6 @@
 \*------------------------------------*/
 .footer {
 	width: 100%;
-	padding: 15px 0;
 	margin-top: 8px;
 	margin-bottom: 20px;
 }
@@ -11,6 +10,7 @@
 .footer__container {
 	display: flex;
 	justify-content: space-between;
+	padding: 0 30px 30px 30px;
 }
 
 .footer__info {
@@ -37,7 +37,6 @@
 @media (max-width: 1410px) {
 	.footer {
 		width: 100%;
-		padding: 15px;
 		margin: 0;
 	}
 	.checkbox__text {
