--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -9,9 +9,9 @@
 	left: 0;
 	width: 100vw;
 	height: 80px;
-	box-shadow: $box-sh-container;
 	z-index: 4;
-	background: rgba(0, 0, 0, 0.8);
+	background: rgba(0, 0, 0, 0.9);
+	border-radius: 0 0 18px 18px;
 }
 
 .header__container {
@@ -80,6 +80,7 @@
 @media (max-width: 1325px) {
 	.header {
 		width: 100%;
+		border-radius: 0;
 	}
 	.nav__menu {
 		display: flex;
@@ -102,8 +103,7 @@
 		position: fixed;
 		left: 0;
 		top: 80px;
-		background: rgba(0, 0, 0, 0.8);
-		box-shadow: $box-sh-container;
+		background: rgba(0, 0, 0, 0.9);
 		width: 100%;
 		height: 50%;
 		padding-bottom: 30px;
@@ -111,6 +111,7 @@
 		padding-left: 30px;
 		translate: -110%;
 		transition: 0.6s translate;
+		border-radius: 0 0 18px 18px;
 
 		.nav__menu {
 			flex-direction: column;
