--- a/src/scss/elements/_hero.scss
+++ b/src/scss/elements/_hero.scss
@@ -16,15 +16,18 @@
 }
 
 .btn--hero {
-	min-width: 400px;
-	height: 80px;
+	min-width: 380px;
+	height: 60px;
 	margin: 2rem;
+	padding: 15px 40px;
+	border-radius: 35px;
 	text-transform: uppercase;
 }
 
 .hero__title {
 	font-family: $font-extra;
 	font-size: 3.2rem;
+	font-weight: 900;
 	line-height: 4rem;
 	color: $color-black;
 }
@@ -32,6 +35,7 @@
 .hero__text {
 	color: $color-black;
 	font-size: 1.5rem;
+	font-weight: 300;
 	margin-top: 20px;
 	margin-bottom: 38px;
 }
